# Aspira

./: .gitignore  DESIGN.md  README.md  pyproject.toml  streamlit_app.py
backend/: .dockerignore  .env.example  B_recorder.py  C_ans_checker.py  D_keyword_generator.py  Dockerfile  E_job_wikidata.py  F_Search_Engine.py  G_Parser.py  H_Summaraizer.py  I_evaluation.py  J_speaker.py  K_llamaindex_graph.py  L_llamaindex_rag.py  M_embeddings.py  agent_factory.py  api_server.py  aspira.py  auth.py  database.py  docker-compose.yml  drop_index.py  implementation_plan_graphrag_full.md  logger_config.py  migrate_db.py  model_cache.py  prompts.py  pyproject.toml  requirements.txt  search-agent.py  sys_msgs.py  test_pydantic_ai.py  todo.md  visualize_graph.py
backend/documents/: conda_installation_commands.md  todo.md
backend/pymongo_migrations/: add_conversation_id.py
backend/test/: test_db_persistence.py  test_graph_gen.py  test_graph_gen_v2.py  test_graph_viz.py  test_mongo_db.py  test_summary_logging.py
backend/tests/: conftest.py
backend/tests/e2e/: test_api.py
backend/tests/integration/: test_database.py  test_knowledge_graph.py
backend/tests/unit/: test_auth.py  test_evaluation.py
frontend/: .env  .gitignore  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/pages/: Auth.tsx  Dashboard.tsx  Interview.tsx  KnowledgeMap.tsx  Setup.tsx
frontend/src/services/: api.ts
