[project]
name = "aspira-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.14.1",
    "debugpy>=1.8.20",
    "edge-tts>=7.2.8",
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "keybert>=0.9.0",
    "langfuse>=4.5.1",
    "langgraph>=1.1.10",
    "langgraph-checkpoint>=4.0.3",
    "llama-cpp-python>=0.3.21",
    "llama-index-core>=0.14.21",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.3",
    "pydantic-ai>=1.89.1",
    "pydantic-ai-slim[groq]>=1.89.1",
    "pymongo-migrate>=1.0.0",
    "pymongo[srv]>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "spacy>=3.8.14",
    "sse-starlette>=3.4.1",
    "streamlit>=1.57.0",
    "streamlit-mic-recorder>=0.0.8",
    "textblob>=0.20.0",
    "textstat>=0.7.13",
    "trafilatura>=2.0.0",
    "uvicorn>=0.46.0",
    "yake>=0.7.3",
    "networkx>=3.4.2",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.136.1",
    "pytest>=9.0.3",
]
